Added circuit breaker and baseline loadbalancer ready